<resources>
    <string name="app_name">L6_SharedPreference</string>
    <string name="label_article_image">News picture</string>
    <string name="label_article_title">Article title</string>
    <string name="article_description">Article Description</string>
    <string name="settings_button">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_preference">Preference</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_checkbox_key">Checkbox key</string>
    <string name="pref_checkbox_title">Include pictures</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>

    <string name="lang_ru">Russian</string>
    <string name="lang_en">English</string>
    <string name="lang_fr">French</string>

    <string name="settings_btn_save_lbl">Save</string>

    <!-- Default preference values -->
    <string name="pref_default_api_key" translatable="false">95718e78b75c4f17bd4f253feb2503a7</string>
    <string name="pref_default_gui_lang" translatable="false">en</string>

    <string name="news_uri">https://newsapi.org/v2/top-headlines</string>


    <string name="gui_language">Interface language</string>
    <string name="news_sources_title">News sources</string>
    <string name="api_key_title">API Key</string>
    <string name="show_pictures_title">Show pictures</string>
</resources>
